--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
           <a href="https://www.youtube.com/watch?v=WZg96vk0mQA" class="btn btn-primary">Liat video</a>
         </div>
       </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/sigma" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">I'm the one</p>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
