--- a/index.html
+++ b/index.html
@@ -92,12 +92,30 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="img/sigma" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">I'm the one</p>
+
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <img src="img/sigma" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">King Antony</h5>
+              <p class="card-text">Super Sub tersigma sejagad epl</p>
+              <a href="#" class="btn btn-primary">Like</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <img src="img/chill" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">King Antony</h5>
+              <p class="card-text">Lagi Santai Kawan</p>
+              <a href="#" class="btn btn-primary">Like</a>
+            </div>
+          </div>
         </div>
       </div>
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
