--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/roar" class="d-block w-100" alt="...">
+            <img src="img/roar.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Gw bapuk</h5>
               <p>Gw when bapuk</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/henry" class="d-block w-100" alt="...">
+            <img src="img/henry.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Gw prime</h5>
               <p>Gw kalo lagi prime futsal</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/reynold" class="d-block w-100" alt="...">
+            <img src="img/reynold.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Gw wannabe</h5>
               <p>Gw when making jokes</p>
@@ -82,21 +82,30 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <br>
+      <br>
+      <br>
 
+      <div class="container">
       <div class="card">
         <h5 class="card-header">Special Video</h5>
         <div class="card-body">
           <h5 class="card-title">Momen legendaris king antony</h5>
           <p class="card-text">Klik link dibawah ini untuk melihat video nya, jangan lupa subrek</p>
-          <a href="https://www.youtube.com/watch?v=WZg96vk0mQA" class="btn btn-primary">Liat video</a>
+          <a href="https://www.youtube.com/watch?v=WZg96vk0mQA" class="btn btn-primary" target="_blank">Liat video</a>
         </div>
+      </div>
+      <br>
+      <br>
+      <br>
       </div>
 
 
+      <div class="container">
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="card">
-            <img src="img/sigma" class="card-img-top" alt="...">
+            <img src="img/sigma.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">King Antony</h5>
               <p class="card-text">Super Sub tersigma sejagad epl</p>
@@ -106,7 +115,7 @@
         </div>
         <div class="col-sm-6">
           <div class="card">
-            <img src="img/chill" class="card-img-top" alt="...">
+            <img src="img/chill.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">King Antony</h5>
               <p class="card-text">Lagi Santai Kawan</p>
@@ -114,7 +123,57 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <img src="img/ant.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">King Antony</h5>
+              <p class="card-text">Ermmm</p>
+              <a href="#" class="btn btn-primary">Like</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <img src="img/ant2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">King Antony</h5>
+              <p class="card-text">Tawheed syabab</p>
+              <a href="#" class="btn btn-primary">Like</a>
+            </div>
+          </div>
+        </div>
       </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
+      <form>
+        <div class="container">
+          <div class="card">
+            <div class="container">
+        <div class="mb-6">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">Ga bakal gw hack kok</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+          <div id="emailHelp" class="form-text">Bukan pishing kok</div>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      </div>
+      </div>
+      </form>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
