--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Antonys</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e73434">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #DA291C">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Ryan</a>
         <button
@@ -66,7 +66,7 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
+            <button class="btn btn-outline-danger" type="submit">
               Search
             </button>
           </form>
@@ -262,12 +262,12 @@
     <!-- Footer -->
     <footer
       class="text-center text-lg-start text-white"
-      style="background-color: #e73434"
+      style="background-color: #DA291C"
     >
       <!-- Section: Social media -->
       <section
         class="d-flex justify-content-between p-4"
-        style="background-color: #dd930a"
+        style="background-color: #FBE122"
       >
         <!-- Left -->
         <div class="me-5">
