--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
             </div>
           </div>
         </div>
+        <br>
+        <div class="row"></div>
+        <br>
         <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="card">
             <img src="img/ant.jpg" class="card-img-top" alt="..." />
