--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Career</a>
+              <a class="nav-link" href="table.html">Table</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -49,7 +49,7 @@
                 Galeri
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Smp</a></li>
+                <li><a class="dropdown-item" href="vid.html">Antony spin</a></li>
                 <li><a class="dropdown-item" href="#">Sma</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Random post</a></li>
