--- a/vid.html
+++ b/vid.html
@@ -57,10 +57,10 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Moment
+                  Galeri
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="vid.html">Antony Spin</a></li>
+                  <li><a class="dropdown-item" href="vid.html">Antony spin</a></li>
                   <li><a class="dropdown-item" href="#">Sma</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Random post</a></li>
@@ -91,8 +91,8 @@
             <p class="text-muted">Tetap terupdate dengan informasi klasemen terbaru!</p>
         </div>
         <div class="iframe-container">
-            <iframe src="https://www.flashscore.co.id/sepak-bola/inggris/liga-primer/peringkat/#/lAkHuyP3/table/overall" 
-                    title="Klasemen Liga Primer Inggris"></iframe>
+            <iframe src="https://youtu.be/3p8ZDiMTXKE?si=rKUQ3JTuEUezeNe2" 
+                    title="Antony Spin"></iframe>
         </div>
     </div>
 
