--- a/vid.html
+++ b/vid.html
@@ -91,8 +91,7 @@
             <p class="text-muted">Tetap terupdate dengan informasi klasemen terbaru!</p>
         </div>
         <div class="iframe-container">
-            <iframe src="https://youtu.be/3p8ZDiMTXKE?si=rKUQ3JTuEUezeNe2" 
-                    title="Antony Spin"></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/3p8ZDiMTXKE?si=snoixHpc6FQjSGO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 
