--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Galeri
+                Moment
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="vid.html">Antony spin</a></li>
