--- a/vid.html
+++ b/vid.html
@@ -87,8 +87,8 @@
   
     <div class="container mt-5">
         <div class="text-center mb-4">
-            <h1 class="display-5">Klasemen Liga Primer Inggris</h1>
-            <p class="text-muted">Tetap terupdate dengan informasi klasemen terbaru!</p>
+            <h1 class="display-5">Antony Spin Tutorial in 4K</h1>
+            <p class="text-muted">Watch and learn from the GOAT!!!</p>
         </div>
         <div class="iframe-container">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/3p8ZDiMTXKE?si=snoixHpc6FQjSGO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
